# MLops

./: .gitignore  README.md  add_carrying_feature.py  assign_columns.py  clean_forklift_height.py  detect_load_anomalies.py  evaluate_load_sensor.py  monitor_safety.py  plot_carrying_diagnostics.py  plot_carrying_feature.py  plot_cleaned_forklift_height.py  plot_forklift_height.py  plot_forklift_load.py  plot_load_anomalies.py  plot_onduty_deletion.py  plot_safety_monitor.py  pyproject.toml
.dagster/.telemetry/: id.yaml
.dagster/history/: runs.db
.dagster/history/runs/: bdfe0ec4-50d5-4aea-a717-0aa518cf6b54.db  e6598b27-0d65-4693-8179-658f5e5e4ba9.db  index.db
.dagster/schedules/: schedules.db
.dagster/storage/bdfe0ec4-50d5-4aea-a717-0aa518cf6b54/compute_logs/: mygnmnuw.err
.dagster/storage/e6598b27-0d65-4693-8179-658f5e5e4ba9/compute_logs/: toeyzqhs.err
pipeline/: README.md  __init__.py  repo.py
pipeline/assets/: __init__.py  data_assets.py  model_assets.py
pipeline/io_managers/: __init__.py  dataframe_io_manager.py  local_pickle_io_manager.py
pipeline/resources/: __init__.py  lakefs.py  model_registry.py
pipeline/sensors/: __init__.py  lakefs_sensor.py
pipeline/utils/: __init__.py  dataset_refs.py  paths.py
